cursive-bootstrap/tests/ui/E-SEM/E-SEM-3164.cursive
// RUN: compile-fail
// DIAG: E-SEM-3164
// SPEC: 8.17
// DESC: result type mismatch with block

procedure block_type() -> i32 {
    return {
        result "hello"  //~ ERROR E-SEM-3164: result type mismatch
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
